--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="theme-color" content="#000000">
+	<link rel="manifest" href="manifest.json">
+	<link rel="apple-touch-icon" href="TemplateData/Icon.png">
     <title>Unity WebGL Player | Test</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
@@ -89,7 +93,7 @@
         // performance, uncomment the following line:
         // config.devicePixelRatio = 1;
 
-        unityShowBanner('WebGL builds are not supported on mobile devices.');
+        //unityShowBanner('WebGL builds are not supported on mobile devices.');
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
@@ -114,6 +118,18 @@
         });
       };
       document.body.appendChild(script);
+
+	 if ('serviceWorker' in navigator) {
+	  window.addEventListener('load', () => {
+	    navigator.serviceWorker.register('service-worker.js')
+		 .then(registration => {
+		   console.log('service worker register', registration);
+		 })
+		 .catch(error => {
+		   console.log('error when registering service worker', error);
+		 });
+	  });
+	}
     </script>
   </body>
 </html>
