--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
       </div>
     </div>
     <script>
+	console.log('some');
+	if ('serviceWorker' in navigator) {
+	  window.addEventListener('load', () => {
+	    navigator.serviceWorker.register('service-worker.js')
+		 .then(registration => {
+		   console.log('service worker register', registration);
+		 })
+		 .catch(error => {
+		   console.log('error when registering service worker', error);
+		 });
+	  });
+	}
+
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
       var loadingBar = document.querySelector("#unity-loading-bar");
@@ -118,18 +131,6 @@
         });
       };
       document.body.appendChild(script);
-
-	 if ('serviceWorker' in navigator) {
-	  window.addEventListener('load', () => {
-	    navigator.serviceWorker.register('service-worker.js')
-		 .then(registration => {
-		   console.log('service worker register', registration);
-		 })
-		 .catch(error => {
-		   console.log('error when registering service worker', error);
-		 });
-	  });
-	}
     </script>
   </body>
 </html>
