--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
         // performance, uncomment the following line:
         // config.devicePixelRatio = 1;
 
-        //unityShowBanner('WebGL builds are not supported on mobile devices.');
+        unityShowBanner('jhj;kh;j;jl;');
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
-
+	   unityShowBanner('on pc');
         canvas.style.width = "960px";
         canvas.style.height = "600px";
       }
