--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/test.loader.js";
+      var loaderUrl = buildUrl + "/TestWebGLPage.loader.js";
       var config = {
-        dataUrl: buildUrl + "/test.data.gz",
-        frameworkUrl: buildUrl + "/test.framework.js.gz",
-        codeUrl: buildUrl + "/test.wasm.gz",
+        dataUrl: buildUrl + "/TestWebGLPage.data.br",
+        frameworkUrl: buildUrl + "/TestWebGLPage.framework.js.br",
+        codeUrl: buildUrl + "/TestWebGLPage.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "reun",
         productName: "Test",
