--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/TestWebGLPage.loader.js";
       var config = {
-        dataUrl: buildUrl + "/TestWebGLPage.data.br",
-        frameworkUrl: buildUrl + "/TestWebGLPage.framework.js.br",
-        codeUrl: buildUrl + "/TestWebGLPage.wasm.br",
+        dataUrl: buildUrl + "/TestWebGLPage.data",
+        frameworkUrl: buildUrl + "/TestWebGLPage.framework.js",
+        codeUrl: buildUrl + "/TestWebGLPage.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "reun",
         productName: "Test",
