--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Test</title>
+    <title>Unity WebGL Player | PWA011</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <link rel="manifest" href="manifest.webmanifest">
@@ -64,8 +64,8 @@
         codeUrl: buildUrl + "/TestWebGLPage.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "reun",
-        productName: "Test",
-        productVersion: "0.1",
+        productName: "PWA011",
+        productVersion: "0.1.1",
         showBanner: unityShowBanner,
       };
 
