--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </script>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | PWA011</title>
+    <title>Unity WebGL Player | PWA012</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <link rel="manifest" href="manifest.webmanifest">
@@ -68,13 +68,13 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/TestWebGLPage.loader.js";
       var config = {
-        dataUrl: buildUrl + "/TestWebGLPage.data",
-        frameworkUrl: buildUrl + "/TestWebGLPage.framework.js",
-        codeUrl: buildUrl + "/TestWebGLPage.wasm",
+        dataUrl: buildUrl + "/TestWebGLPage.data.unityweb",
+        frameworkUrl: buildUrl + "/TestWebGLPage.framework.js.unityweb",
+        codeUrl: buildUrl + "/TestWebGLPage.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "reun",
-        productName: "PWA011",
-        productVersion: "0.1.1",
+        productName: "PWA012",
+        productVersion: "0.1.2",
         showBanner: unityShowBanner,
       };
 
