--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/TestWebGLPage.loader.js";
+      var loaderUrl = buildUrl + "/build.loader.js";
       var config = {
-        dataUrl: buildUrl + "/TestWebGLPage.data.unityweb",
-        frameworkUrl: buildUrl + "/TestWebGLPage.framework.js.unityweb",
-        codeUrl: buildUrl + "/TestWebGLPage.wasm.unityweb",
+        dataUrl: buildUrl + "/build.data.unityweb",
+        frameworkUrl: buildUrl + "/build.framework.js.unityweb",
+        codeUrl: buildUrl + "/build.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "reun",
         productName: "PWA012",
