--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   gtag('js', new Date());
 
   gtag('config', 'G-SF4G6BS22Q');
+  console.log('test');
 </script>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
